Add FreeMarker with greeting

--- a/FirstSpring/src/main/resources/application.properties
+++ b/FirstSpring/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=admin
 spring.data.mongodb.database=test_db
+spring.freemarker.template-loader-path=classpath:/templates/
+spring.freemarker.enabled=true
+spring.freemarker.suffix = .ftl
+spring.thymeleaf.enabled=false
+
